# tss-client-android

./: .gitignore  index.html  jitpack.yml  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/web3auth/tss_client_android/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/web3auth/tss_client_android_example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/web3auth/tss_client_android/: MainActivity.java
app/src/main/java/com/web3auth/tss_client_android_example/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/web3auth/tss_client_android_example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tss-client-android/: build.gradle
tss-client-android/libs/include/: dkls.h
tss-client-android/src/androidTest/java/com/web3auth/tss_client_android/: DklsTests.java  ExampleInstrumentedTest.java  TssClientTests.java  TssHelpersTests.java
tss-client-android/src/main/: AndroidManifest.xml
tss-client-android/src/main/cpp/: CMakeLists.txt  jniChaChaRng.cpp  jniCommon.cpp  jniCounterparties.cpp  jniDKLSComm.cpp  jniPrecompute.cpp  jniSignatureFragments.cpp  jniThresholdSigner.cpp  jniUtilities.cpp
tss-client-android/src/main/java/com/web3auth/tss_client_android/: ByteUtils.java  DELIMITERS.java  Delimiters.java  EndpointsData.java  Key.java  Utils.java
tss-client-android/src/test/java/com/web3auth/tss_client_android/: DklsTests.java  ExampleUnitTest.java  TssClientTests.java  TssHelpersTests.java
(+49 files in other folders)
